--- a/src/Pages/PgprogramPage/PgApplications.css
+++ b/src/Pages/PgprogramPage/PgApplications.css
@@ -56,9 +56,9 @@
   background: #f6921e;
   color: #fff;
   border: none;
-  font-size: 6px;
+  font-size: 12px;
   border-radius: 4px;
-  padding: 0.3rem .8rem;
+  padding:0.2rem 1rem;
   cursor: pointer;
   transition: background 0.3s;
 }
