--- a/src/Components/PGDM-program/OverviewTab/OverviewKeyhighlights.css
+++ b/src/Components/PGDM-program/OverviewTab/OverviewKeyhighlights.css
@@ -3,6 +3,9 @@
   align-items: start;
   margin-top: 100px !important;
 }
+.clear-div li{
+  margin-bottom: 0.5rem !important;
+}
 
 /* Left nav pills */
 .left-nav .nav-pill {
@@ -235,6 +238,7 @@
   text-align: center;
   z-index: 9999;
 }
+
 
 .swiper-pagination-bullet {
   background: #5ac501;  /* green dots */
