--- a/src/index.css
+++ b/src/index.css
@@ -150,7 +150,7 @@ h1,h2,h3,h4,h5,h6{
   font-weight: 800;
   color: #011225;
 }
-p{
+p, ul>li, ol>li{
   font-family: "Merriweather", serif !important;
   margin: 0;
   font-weight: 500 !important;
