updated career robat page

--- a/src/Pages/PGPMFlexPage/PGPMFlexPage.css
+++ b/src/Pages/PGPMFlexPage/PGPMFlexPage.css
@@ -519,6 +519,9 @@
     .who-is-for-section{
     padding: 0 !important;
   }
+  .course-structure.p-sm-0{
+    padding-top: 0 !important;
+  }
 }
 
 
