--- a/src/Pages/PGPMFlexPage/PGPMFlexPage.css
+++ b/src/Pages/PGPMFlexPage/PGPMFlexPage.css
@@ -53,7 +53,7 @@
 
 /* Specific section colors */
 .PGPMFLEX-in-class {
-    background: rgb(249, 250, 252);
+    background: #b7ef8c;
     border-width: 1px;
     /* border-style: solid; */
     border-color: rgb(230, 230, 230);
